--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ packages/**/digitalPropertyNetwork.bna
 
 # Fabric start tools if they are downloaded into the usual directory
 fabric-tools/**
+
+# Ignore DS_Store
+.DS_Store
