--- a/packages/vehicle-lifecycle/installers/hlfv1/install.sh.in
+++ b/packages/vehicle-lifecycle/installers/hlfv1/install.sh.in
@@ -251,12 +251,12 @@ sleep 10
 ##docker ps -aq | xargs docker rm -f
 
 # Open the playground in a web browser.
-URLS="http://localhost:8080 http://localhost:3000/explorer/ http://localhost:1880 http://localhost:6001 http://localhost:6002 http://localhost:8100 http://localhost:4200"
+URLS="http://localhost:8080 http://localhost:3000/explorer/ http://localhost:1880 http://localhost:6001 http://localhost:6002 http://localhost:8100 http://localhost:4200 https://i5l9uv.internetofthings.ibmcloud.com/dashboard/#/boards/spnair@us.ibm.com-AnalyticsDefaultBoard_RuleCentric.1 https://ibmblockchain-staging-v2.stage1.ng.bluemix.net/network/e31f1b41705a46298b77fe435b5fdfc7/members"
 case "$(uname)" in
 "Darwin") open ${URLS}
           ;;
 "Linux")  if [ -n "$BROWSER" ] ; then
-	       	        $BROWSER http://localhost:8080 http://localhost:3000/explorer/ http://localhost:1880 http://localhost:6001 http://localhost:6002 http://localhost:8100 http://localhost:4200
+	       	        $BROWSER http://localhost:8080 http://localhost:3000/explorer/ http://localhost:1880 http://localhost:6001 http://localhost:6002 http://localhost:8100 http://localhost:4200 https://i5l9uv.internetofthings.ibmcloud.com/dashboard/#/boards/spnair@us.ibm.com-AnalyticsDefaultBoard_RuleCentric.1 https://ibmblockchain-staging-v2.stage1.ng.bluemix.net/network/e31f1b41705a46298b77fe435b5fdfc7/members
 	        elif    which x-www-browser > /dev/null ; then
                   nohup x-www-browser ${URLS} < /dev/null > /dev/null 2>&1 &
           elif    which xdg-open > /dev/null ; then
@@ -264,7 +264,7 @@ case "$(uname)" in
                           xdg-open ${URL}
 	                done
           elif  	which gnome-open > /dev/null ; then
-	                gnome-open http://localhost:8080 http://localhost:3000/explorer/ http://localhost:1880 http://localhost:6001 http://localhost:6002 http://localhost:8100 http://localhost:4200
+	                gnome-open http://localhost:8080 http://localhost:3000/explorer/ http://localhost:1880 http://localhost:6001 http://localhost:6002 http://localhost:8100 http://localhost:4200 https://i5l9uv.internetofthings.ibmcloud.com/dashboard/#/boards/spnair@us.ibm.com-AnalyticsDefaultBoard_RuleCentric.1 https://ibmblockchain-staging-v2.stage1.ng.bluemix.net/network/e31f1b41705a46298b77fe435b5fdfc7/members
           #elif other types blah blah
 	        else
     	            echo "Could not detect web browser to use - please launch Composer Playground URL using your chosen browser ie: <browser executable name> http://localhost:8080 or set your BROWSER variable to the browser launcher in your PATH"
@@ -276,4 +276,10 @@ esac
 
 # Exit; this is required as the payload immediately follows.
 exit 0
+
+# IF IOT PLATFORM DIDNT OPEN DUE TO REQUIRING LOG IN, LOG IN THEN FOLLOW THIS LINK
+https://i5l9uv.internetofthings.ibmcloud.com/dashboard/#/boards/spnair@us.ibm.com-AnalyticsDefaultBoard_RuleCentric.1
+
+# IF BLOCKCHAIN PLATFORM DIDN'T OPEN TO TO REQUIRING LOG IN, LOG IN THEN FOLLOW THIS LINK
+https://ibmblockchain-staging-v2.stage1.ng.bluemix.net/network/e31f1b41705a46298b77fe435b5fdfc7/members
 
