improvements from proposal
Signed-off-by: awjh-ibm <andrew.hurt1@ibm.com>

--- a/packages/vehicle-lifecycle/package.json
+++ b/packages/vehicle-lifecycle/package.json
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "vehicle-lifecycle-network": "^0.1.1"
+    "vehicle-lifecycle-network": "^0.2.1-20180108124335"
   }
 }
