Added tutorial app with app in app for all apps
Signed-off-by: awjh-ibm <andrew.hurt1@ibm.com>

--- a/packages/vehicle-manufacture-tutorial/package.json
+++ b/packages/vehicle-manufacture-tutorial/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vehicle-manufacture-manufacturing",
+  "name": "vehicle-manufacture-tutorial",
   "private": true,
   "version": "0.0.6",
-  "description": "Vehicle Lifecycle - A manufacturers view",
+  "description": "Vehicle Lifecycle - Tutorial",
   "main": "index.js",
   "scripts": {
     "postinstall": "bower install",
