--- a/packages/vehicle-manufacture-tutorial/bower.json
+++ b/packages/vehicle-manufacture-tutorial/bower.json
@@ -18,10 +18,7 @@
     "tests"
   ],
   "dependencies": {
-    "d3": "^4.7.4",
     "angular": "^1.6.4",
-    "angular-ui-router": "^0.4.2",
-    "components-font-awesome": "^4.7.0",
-    "angular-ui-notification": "^0.3.6"
+    "angular-ui-router": "^0.4.2"
   }
 }
