Removing lifecycle mentions
Signed-off-by: awjh-ibm <andrew.hurt1@ibm.com>

--- a/packages/vehicle-manufacture-vda/package.json
+++ b/packages/vehicle-manufacture-vda/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vehicle-lifecycle-vda",
+  "name": "vehicle-manufacture-vda",
   "private": true,
   "version": "0.0.6",
   "description": "Vehicle Lifecycle - A regulators view",
